animations working, texture z-index corrected

--- a/app/assets/stylesheets/bootstrap.css.less
+++ b/app/assets/stylesheets/bootstrap.css.less
@@ -364,7 +364,7 @@ body {
 }
 
 .texture {
-	display: none;
+	//display: none;
 	min-height: 100%;
 	min-width: 400px;
 	width: 100%;
@@ -374,7 +374,7 @@ body {
 	left: 0;
 	background: url(texture.png); 
 	opacity: .35;
-	z-index: 50;
+	z-index: 70;
 }
 
 @media screen and (max-width: 1200px) { /* Specific to this particular image */
